code/gcloud/telemedicine/patient-imaging/istio/mtls.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: patientimaging-mtls
  namespace: patient-imaging
spec:
  mtls:
    mode: STRICT
