code/gcloud/telemedicine/patient-imaging/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: patient-imaging
  namespace: patient-imaging
spec:
  hosts:
  - "127.0.0.1.pi.sslip.io"
  gateways:
  - patient-imaging
  http:
  - match:
    - uri:
        prefix: /patient_imaging
    route:
    - destination:
        host: patient-imaging
        port:
          number: 5000
